# Polymarket-Geopolitical-Insights

./: .gitignore  README.md  start.sh
backend/: analyze_prominent_figure_tweets.py  env.example  foundational_data.py  historical_research.py  historical_research_live.py  prediction_server.py  prominent_figure_service.py  pyproject.toml  requirements.txt
backend/auth/: utils.py
backend/grok_pipeline/: __init__.py  agentgrok.py  example_events.py  grok_client.py  orchestrator.py  schemas.py
chrome-extension/: .gitignore  README.md  components.json  manifest.json  package.json  tailwind.config.js
chrome-extension/src/: background.ts
chrome-extension/src/content/: App.tsx  index.tsx
chrome-extension/src/content/components/: AnalysisResult.tsx  OutcomeCard.tsx  StreamingLog.tsx
chrome-extension/src/content/components/ui/: accordion.tsx  button.tsx
chrome-extension/src/content/hooks/: useAnalysis.ts  useMarketData.ts
