[project]
name = "grokedge-backend"
version = "0.1.0"
description = "GrokEdge - Grok-powered prediction market analysis backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "xai-sdk>=0.1.0",
    "httpx>=0.26.0",
    "xdk>=0.1.0",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grok_pipeline", "auth"]

